src/tui/snapshots/gander__tui__render__tests__annotation_channel_draft_rows.snap
---
source: src/tui/render.rs
expression: "format!(\"{}\\nstyle runs:\\n{}\", render_tui_text(&session, &mode, 110, 24),\nstyle_runs_for_rows(&buffer,\n&[\"agent onboarding line draft\", \"agent onboarding file draft\",],))"
---
┌files──────────────────────────┐┌diff───────────────────────────────────────────────────────────────────────┐
│• mod     a.txt                ││a.txt  +4 -1                                                               │
│                               ││@@ -1 +1,4 @@                                                              │
│                               ││    1 - old                                                                │
│                               ││3   1 + onboarding                                                         │
│         ┌agent drafts────────────────────────────────────────────────────────────────────────────┐────────╮│
│         │Agent-drafted comments awaiting your decision                                           │        ││
│         │  [→ reviewer] agent:configured-review-agent [draft] a.txt:1 agent onboarding line draft│        ││
│         │› [→ reviewer] agent:configured-review-agent [draft] a.txt agent onboarding file draft  │        ││
│         │                                                                                        │────────╯│
│         │j/k move · enter accept · e edit then accept · x discard · esc close                    │────────╮│
│         │                                                                                        │        ││
│         │                                                                                        │        ││
│         │                                                                                        │        ││
│         │                                                                                        │────────╯│
│         │                                                                                        │────────╮│
│         │                                                                                        │        ││
│         │                                                                                        │        ││
│         └────────────────────────────────────────────────────────────────────────────────────────┘        ││
│                               ││╰─────────────────────────────────────────────────────────────────────────╯│
│                               ││1   2 + delegation                                                         │
└───────────────────────────────┘└───────────────────────────────────────────────────────────────────────────┘
1 files (0/1 viewed, 0 generated/noisy), +4/-1, 7 comments · following @
agent drafts · j/k move · enter accept · e edit · x discard · esc close

style runs:
agent onboarding line draft: "│         │"=Style::new().fg(Color::Rgb(230, 237, 243)).bg(Color::Reset).underline_color(Color::Reset) | "  [→ reviewer] "=Style::new().fg(Color::Rgb(210, 153, 34)).bg(Color::Reset).underline_color(Color::Reset) | "agent:configured-review-agent [draft] "=Style::new().fg(Color::Rgb(122, 127, 133)).bg(Color::Reset).underline_color(Color::Reset) | "a.txt:1 "=Style::new().fg(Color::Rgb(76, 176, 168)).bg(Color::Reset).underline_color(Color::Reset) | "agent onboarding line draft"=Style::new().fg(Color::Rgb(210, 153, 34)).bg(Color::Reset).underline_color(Color::Reset) | "│"=Style::new().fg(Color::Rgb(230, 237, 243)).bg(Color::Reset).underline_color(Color::Reset) | "        │"=Style::new().fg(Color::Rgb(210, 153, 34)).bg(Color::Reset).underline_color(Color::Reset) | "│"=Style::new().fg(Color::Rgb(230, 237, 243)).bg(Color::Reset).underline_color(Color::Reset)
agent onboarding file draft: "│         │"=Style::new().fg(Color::Rgb(230, 237, 243)).bg(Color::Reset).underline_color(Color::Reset) | "› [→ reviewer] "=Style::new().fg(Color::Rgb(210, 153, 34)).bg(Color::Reset).underline_color(Color::Reset) | "agent:configured-review-agent [draft] "=Style::new().fg(Color::Rgb(122, 127, 133)).bg(Color::Reset).underline_color(Color::Reset) | "a.txt "=Style::new().fg(Color::Rgb(76, 176, 168)).bg(Color::Reset).underline_color(Color::Reset) | "agent onboarding file draft"=Style::new().fg(Color::Rgb(210, 153, 34)).bg(Color::Reset).underline_color(Color::Reset).bold() | "  │"=Style::new().fg(Color::Rgb(230, 237, 243)).bg(Color::Reset).underline_color(Color::Reset) | "│"=Style::new().fg(Color::Rgb(210, 153, 34)).bg(Color::Reset).underline_color(Color::Reset) | "│"=Style::new().fg(Color::Rgb(230, 237, 243)).bg(Color::Reset).underline_color(Color::Reset)
