src/tui/snapshots/gander__tui__render__tests__inline_annotation_card_side_by_side_range.snap
---
source: src/tui/render.rs
expression: "render_tui_text(&session, &Mode::Normal, 130, 24)"
---
┌diff · a.rs─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│a.rs  +2 -1                                                                                                                     │
│@@ -1 +1,2 @@                                                                                                                   │
│    1 - old                                                    │1   1 + new one                                                 │
│                                                               │1   2 + new two                                                 │
│╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮│
││human:local  [→ note]  [draft]                                                                                                ││
││right-side range                                                                                                              ││
││@ a.rs:1-2                                                                                                                    ││
││body: second card line in side-by-side view                                                                                   ││
│╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
1 files (0/1 viewed, 0 generated/noisy), +2/-1, 1 comment · following @
trunk()..@ · focus diff (wrap) · j/k line · d/u scroll · V view/wrap · r range · Y walkthrough · c comment · ctrl-y handoff · n/N
